--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
       - name: 🔨 Build Project
         run: |
           npm cache clean --force
+          rm -rf node_modules
+          rm -rf package-lock.json
           npm install
           npm run build
 
