--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,3 +48,8 @@ jobs:
           ssh-port: 22
           source-path: ./
           destination-path: /var/www/new.rechip-tuning.ru/htdocs/
+
+      - name: ⭐ Start site via forever
+        run: |
+          forever stopall
+          forever start .output/server/index.mjs
