--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "primevue": "^3.51.0",
     "vue": "^3.4.21",
     "vue-easy-lightbox": "^1.19.0",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-yandex-maps": "^2.1.3"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
