--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "vue": "^3.4.21",
     "vue-easy-lightbox": "^1.19.0",
     "vue-router": "^4.3.0",
-    "vue-yandex-maps": "^2.1.3"
+    "vue-the-mask": "^0.11.1",
+    "vue-yandex-maps": "^2.1.3",
+    "vue3-toastify": "^0.2.2"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
