--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "moment": "^2.30.1",
     "nuxt": "^3.11.1",
     "nuxt-swiper": "^1.2.2",
     "pinia": "^2.1.7",
