--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,29 +25,16 @@ jobs:
           npm install
           npm run build
 
-      - name: 📂 Remove Old Files
-        uses: appleboy/ssh-action@v1.0.3
+      # Загрузка файлов с помощью SCP
+      - name: 📂 Upload project files to server via SCP
+        uses: appleboy/scp-action@v0.1.5
         with:
           host: ${{ secrets.PROD_FTP_HOST }}
           username: ${{ secrets.PROD_FTP_USER }}
-          password: ${{ secrets.PROD_FTP_PASSWORD }}
           port: 22
-          script: |
-            if [ -d "/var/www/html/new.rechip-tuning.ru/" ]; then
-              find /var/www/html/new.rechip-tuning.ru/ -mindepth 1 -delete
-            else
-              echo "Directory does not exist, nothing to remove"
-            fi
-
-      - name: 📂 Sync New Files
-        uses: SamKirkland/web-deploy@v1
-        with:
-          target-server: ${{ secrets.PROD_FTP_HOST }}
-          remote-user: ${{ secrets.PROD_FTP_USER }}
-          private-ssh-key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
-          ssh-port: 22
-          source-path: ./
-          destination-path: /var/www/html/new.rechip-tuning.ru/
+          key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
+          source: "dist"  # Путь к скомпилированным файлам
+          target: "/var/www/html/new.rechip-tuning.ru/"
 
       - name: ⭐ Start site via PM2
         uses: appleboy/ssh-action@v1.0.3
