--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@tailwindcss/forms": "^0.5.7",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "axios": "^1.7.9",
     "moment": "^2.30.1",
     "nuxt": "^3.11.1",
     "nuxt-swiper": "^1.2.2",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
+    "sitemap": "^8.0.0",
     "vue": "^3.4.21",
     "vue-easy-lightbox": "^1.19.0",
     "vue-router": "^4.3.0",
