--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@artmizu/yandex-metrika-nuxt": "^1.1.0",
     "@heroicons/vue": "^2.1.3",
     "@nuxt/content": "^2.12.1",
     "@nuxt/image": "^1.5.0",
@@ -24,6 +23,7 @@
     "moment": "^2.30.1",
     "nuxt": "^3.11.1",
     "nuxt-swiper": "^1.2.2",
+    "nuxt-yandex-metrika": "^1.2.9",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
